# gpu-spmv

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  build_docs.sh  test_webbase_v1.sh  test_webbase_v2.sh  test_webbase_v2_cuda125.sh
.github/workflows/: docs.yml
benchmark/: CMakeLists.txt  benchmark_spmv.cpp
data/: test_tiny.mtx
data/matrices/: README
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/common/: matrix_market.rst  sparse_matrix.rst  timer.rst
docs/cpu/: spmv.rst
docs/gpu/: index.rst  kernels.rst  papers.rst
docs/superpowers/plans/: 2026-05-07-cpu-spmv-implementation.md  2026-05-09-csr-scalar.md
docs/superpowers/specs/: 2026-05-07-cpu-spmv-design.md  2026-05-09-csr-scalar-design.md
examples/: CMakeLists.txt  example_spmv_basics.cpp
include/parser/: mtx_parser.h  mtx_parser_gpu.cuh
include/spmv_cpu/: spmv_cpu.h
include/spmv_gpu/: csr_scalar.cuh
resources/: DATASET_SELECTION.md  MATRIX_ALTERNATIVES.md  MATRIX_DETAILED_PROPERTIES.md  MATRIX_MAPPING.md  MATRIX_RESOURCES.md  PAPER_TO_SUITESPARSE_GUIDE.md  README.md  cited_matrices_in_benchmarks.md  matrix_download_links.md
results/: baseline_webbase.csv  correctness_results.csv  final_autoformat.csv  final_autotune.csv  final_default.csv  final_persistent.csv  final_report.md  optimized_autoformat.csv  optimized_autotune.csv  optimized_persistent.csv  profiling_report.csv  qa_autoformat.csv  qa_autotune.csv  qa_default.csv  qa_persistent.csv
scripts/: download_all_29_matrices.sh  download_matrices.sh  fetch_matrix_details.py  fetch_matrix_download_links.py
src/: CMakeLists.txt  hellocuda.cu
src/common/: CMakeLists.txt  matrix_market.cpp  matrix_market.h  sparse_matrix.cpp  sparse_matrix.h  timer.cpp  timer.cu  timer.h
src/cpu/: CMakeLists.txt  spmv_cpu.cpp  spmv_cpu.h
src/gpu/: CMakeLists.txt  gpu_persistent_buffers.cpp  gpu_persistent_buffers.cu  gpu_persistent_buffers.h  gpu_utils.cu  gpu_utils.h  spmv_csr_adaptive.cu  spmv_csr_adaptive.h  spmv_ell.cu  spmv_ell.h  spmv_gpu.h  spmv_gpu_v1.cu  spmv_gpu_v1.h  spmv_gpu_v2.cu  spmv_gpu_v2.h  spmv_selector.cpp  spmv_selector.h
src/parser/: CMakeLists.txt  mtx_parser.cpp  mtx_parser_gpu.cu  mtx_parser_gpu.cuh  test_parser.cpp  test_parser.cu
src/spmv_cpu/: CMakeLists.txt  spmv_cpu.cpp  test_spmv_cpu.cpp
src/spmv_gpu/: CMakeLists.txt  csr_scalar.cu  validate_csr_scalar.cu
tests/: CMakeLists.txt  test_spmv_cpu.cpp  test_spmv_gpu.cpp
tests/gpu/: benchmark_spmv_gpu.cpp  profile_spmv_gpu.cpp  test_persistent_buffer.cpp  test_spmv_gpu_all_matrices.cpp  test_spmv_gpu_v1.cpp
